application/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: shortener-backend
  ports:
    - port: 8000
      targetPort: 8000
